import React from 'react';
import renderer from 'react-test-renderer';
import { ProductImage, ProductCard } from '../../src';
import { product2 } from '../data/product';

describe('ProductImage', () => {
  test('should show example.png', () => {
    const wrapper = renderer.create(
      <ProductImage img='example.png'/>
    );

    expect(wrapper.toJSON()).toMatchSnapshot();
  });

  test('should show the component with product img (context)', () => {
    const wrapper = renderer.create(
      <ProductCard product={product2}>
        {
          ()=><ProductImage />  
        }
      </ProductCard>
    );

    expect(wrapper.toJSON()).toMatchSnapshot();
  });
});
