// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should show example.png 1`] = `
<img
  alt="product"
  className="productImg undefined"
  src="example.png"
/>
`;

exports[`ProductImage should show the component with product img (context) 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
